        Keep DLT_IPMB_LINUX around as a #define for backwards
        compatibility.
    Packet filtering:
      Add support for Block Ack Req and Block Ack frame types (pull
        request #1039).
      Deprecate pcap_compile_nopcap().
      Add support for filtering packets encapsulated with VXLAN (pull
        request #1273).
      Eliminate trailing space in bpf_image() result.
    rpcap:
      Support user names and passwords in rpcap:// and rpcaps:// URLs.
      Add a -t flag to rpcapd to specify the data channel port; from
        another incorporate-remote-capture project. (issue #1120)
      rpcapd: Refine SSL options in printusage().
      Fix a possible buffer overflow (Coverity CID 1619148).
    Documentation:
      Document a standard format for writing out BPF filter programs.
      Add a README.hurd.md file.
      Explain "any" device better in pcap_create(3PCAP).
      Cross-reference some man pages better.
      Actualize README.dag and make it Markdown.
      Add a README.snf.md file.
    Building and testing:
      Apply GNU Hurd support patch from the Debian package.
      CI: Introduce and use LIBPCAP_CMAKE_TAINTED.
      Remove all remaining support for AOS (4.3BSD Unix), BSD/OS, DOS,
        HP-UX before 10.20, IRIX, {OSF/1, Digital Unix, Tru64 Unix}, SINIX,
        SunOS 3.x, 4.x and 5.x before 5.3.2, and Ultrix.
      Add a new test program for pcap_activate().
      Make NetBSD build warning-free.
      Make Sun C build warning-free.
      Make FreeBSD, Linux and macOS builds warning-free.
      Print MAC addresses in findalldevstest.
      Parameterize the interface name in reactivatetest.
      When necessary, trust the OS to implement ffs().
      At build time require a proof of suitable snprintf(3) implementation in
        libc (and document Solaris 9 and MinGW as unsupported because of that).
      Makefile.in: Update the .c.o build rule (Remove hacks for old SunOS 4).
      CMake: Skip snprintf(3) tests when cross-compiling.